docs-archive/apache-airflow-providers-standard/1.6.0/_sources/_api/airflow/providers/standard/example_dags/example_hitl_operator/index.rst.txt
airflow.providers.standard.example_dags.example_hitl_operator
=============================================================

.. py:module:: airflow.providers.standard.example_dags.example_hitl_operator


Attributes
----------

.. autoapisummary::

   airflow.providers.standard.example_dags.example_hitl_operator.hitl_request_callback
   airflow.providers.standard.example_dags.example_hitl_operator.hitl_success_callback
   airflow.providers.standard.example_dags.example_hitl_operator.hitl_failure_callback
   airflow.providers.standard.example_dags.example_hitl_operator.wait_for_input


Classes
-------

.. autoapisummary::

   airflow.providers.standard.example_dags.example_hitl_operator.LocalLogNotifier


Module Contents
---------------

.. py:class:: LocalLogNotifier(message)

   Bases: :py:obj:`airflow.sdk.bases.notifier.BaseNotifier`


   Simple notifier to demonstrate HITL notification without setup any connection.


   .. py:attribute:: template_fields
      :value: ('message',)



   .. py:attribute:: message


   .. py:method:: notify(context)

      Send a notification.

      :param context: The airflow context



.. py:data:: hitl_request_callback

.. py:data:: hitl_success_callback

.. py:data:: hitl_failure_callback

.. py:data:: wait_for_input

